# riddle-rust

./: .gitignore  admin_api.py  app.js  build.js  build_app.bat  build_rust_app.bat  build_tauri_app.bat  client_api.py  models.js  package-lock.json  package.json  readme.md  灯谜导入模板.xlsx
admin/: api_docs.md  package-lock.json  package.json  vite.config.js
admin/src/: App.vue  main.js  style.css
admin/src/api/: activity.js  record.js  request.js  riddle.js  user.js
admin/src/assets/fonts/: xinwei.eot
admin/src/components/: MainLayout.vue  RiddleModal.vue  TopHeader.vue
admin/src/router/: index.js
admin/src/views/: ActivityManage.vue  RecordManage.vue  RiddleManage.vue  UserManage.vue
backend-rust/: Cargo.toml
backend-rust/src/: main.rs  models.rs  utils.rs
backend-rust/src/handlers/: admin.rs  client.rs
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf (Copy).json  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/handlers/: admin.rs  client.rs  mod.rs
template/: index.html  question.html  scan.html
template/admin/: index.html
template/admin/assets/: index-BF8rtDzA.css  index-BIhlHnAa.css  index-D7hUGM_a.css  index-DAz9KvGj.css  index-DJrOr0xj.js  index-HFFK8IBm.js  index-LtFDX5ME.js  index-aGTs1uiw.js
template/css/: style.css  style.css.map
template/frontend/: index.html
template/frontend/css/: style.css  style.css.map
template/frontend/js/: common.js  lib.js  lib.js.map
template/js/: common.js  lib.js  lib.js.map  main.js
