[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tera = "1.19"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tower = "0.4"
socketioxide = "0.12"
calamine = "0.24"
mime_guess = "2.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.21"
async-trait = "0.1"
once_cell = "1.19"
regex = "1.10"
walkdir = "2.4"
rand = "0.8"
time = "0.3"
rust-embed = "8.0"
